--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Fresh from farms</p>
 				</div>
 				<div class="col">
-					<img src="assets/Aakkam Logo_change_Sep232020.png" alt="Company Logo">
+					<img src="assets/AakkamLogo.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
