--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
-<body bgcolor="orange">
+<body style="background-color:Tomato;>
 	<section class="bg-color-grey banner">
 		<div class="container" bgcolor>
 			<div class="row">
