--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
-<body style="background-color:Tomato;>
+<body>
 	<section class="bg-color-grey banner">
-		<div class="container" bgcolor>
+		<div class="container" style="background-color:Tomato;>
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
