--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<section class="bg-color-grey banner">
-		<div class="container" style="background-color:Tomato;>
+		<div class="container" style="background-color:MediumSeaGreen;>
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
